--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     </h3>
 
     <h4>The movies i liked the most</h4>
-    <img src="/assets/images/movie-ranking.png" alt="" height="250">
+    <img src="assets/images/movie-ranking.png" alt="" height="250">
 
     <h3>
-        <a href="/public/birthday-invite.html">Birthday Invite Project</a>
+        <a href="public/birthday-invite.html">Birthday Invite Project</a>
     </h3>
 
     <h1>It's my birthday</h6>
     <h2>On the 22th June</h1>
 
-    <img src="/assets/images/birthday-invite.png" alt="" height="250">
+    <img src="assets/images/birthday-invite.png" alt="" height="250">
     <hr>
-    <a href="/public/about.html">About Me!</a>
-    <a href="/public/contact.html">Contact Me!</a>
+    <a href="public/about.html">About Me!</a>
+    <a href="public/contact.html">Contact Me!</a>
 
 </body>
 </html>
